frame/support/test/tests/construct_runtime_ui/generics_in_invalid_module.stderr
error: `Call` is not allowed to have generics. Only the following pallets are allowed to have generics: `Event`, `Origin`, `Config`.
  --> $DIR/generics_in_invalid_module.rs:10:36
   |
10 |         Balance: balances::<Instance1>::{Call<T>, Origin<T>},
   |                                          ^^^^
